# smart-finances

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  project_plan.md  pyproject.toml
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docker/paddle-ocr/: Dockerfile  app.py  docker-compose.yml  requirements.txt
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py  schemas.py
src/api/routes/: chat.py  processing.py
src/database/: __init__.py  database.py
src/graphs/: __init__.py  chat.py  graph_processing.py  processing.py  state.py
src/graphs/nodes/: __init__.py  node_extractor.py  node_loader.py  node_saver.py
src/graphs/nodes/categorizer_node/: __init__.py  agent.py  prompts.py  tools.py
src/graphs/nodes/extractor_node/: __init__.py  agent.py  prompts.py  tools.py
src/llm/: __init__.py  client.py  extractor.py
src/models/: __init__.py  transaction.py
src/parsers/: __init__.py  csv.py  ocr_client.py  pdf.py  pdf_llm.py
src/settings/: config.py
src/ui/: app.py
tests/: test_api.py  test_db.py  test_extractor.py  test_extractor_agent.py
